--- a/source/disciplina.html
+++ b/source/disciplina.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- jQuery library -->
-    <script src="scripts/jquery-3.3.1.min.js"></script>
+    <script src="scripts/jquery/jquery-3.3.1.min.js"></script>
 
     <!--JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -30,7 +30,7 @@
 
 </head>
     
-<body>
+<body onload="startTime()">
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -94,6 +94,12 @@
             </div>
         </div>
         <div class="col-sm-2 sidenav">
+            <div class="well">
+                <p id="clock"></p>
+            </div>
+            <div class="well">
+                <p>ADS</p>
+            </div>
             <div class="well">
                 <p>ADS</p>
             </div>
