--- a/source/register.html
+++ b/source/register.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     
 <!-- jQuery library -->
-<script src="scripts/jquery-3.3.1.min.js"></script>
+<script src="scripts/jquery/jquery-3.3.1.min.js"></script>
     
 <!--JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
