added my test and answers

--- a/source/answers.html
+++ b/source/answers.html
@@ -18,7 +18,7 @@
 
     <!--JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="scripts/disciplina.js"></script>
+    <script src="scripts/answers.js"></script>
 
     <!--My CSS file -->
     <link rel="stylesheet" href="style/mystyle.css">
@@ -74,20 +74,17 @@
 <div class="container-fluid text-center">    
     <div class="list-group">
         <div class="col-sm-2 sidenav">
-            <a class="list-group-item" href="register-test.html">Adicionar</a>
             <a class="list-group-item" href="#">Remover</a>
         </div>
       
         <div class="col-sm-8 text-justify">
-            <h1>Provas:</h1>
+            <h1>Respostas:</h1>
             <div class="table-responsive">
                 <table id="provas-table" class="table">
                     <tr>
                         <th>Nome</th>
-                        <th>Autor</th>
-                        <th>Hora inicio</th>
-                        <th>Hora fim</th>
-                        <th>Acesso</th>
+                        <th>Acertos</th>
+                        <th>Nota</th>
                     </tr>
                     
                 </table>
