--- a/source/my-page.html
+++ b/source/my-page.html
@@ -18,7 +18,7 @@
 
     <!--JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="scripts/disciplina.js"></script>
+    <script src="scripts/my-page.js"></script>
 
     <!--My CSS file -->
     <link rel="stylesheet" href="style/mystyle.css">
@@ -54,7 +54,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li id="signup-topbar"><a href="register.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li id="login-topbar"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            <li id="user-name-topbar"><a id="username-topbar" href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li id="user-name-topbar"><a id="username-topbar" href="source/register.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
         
@@ -74,17 +74,15 @@
 <div class="container-fluid text-center">    
     <div class="list-group">
         <div class="col-sm-2 sidenav">
-            <a class="list-group-item" href="register-test.html">Adicionar</a>
             <a class="list-group-item" href="#">Remover</a>
         </div>
       
         <div class="col-sm-8 text-justify">
-            <h1>Provas:</h1>
+            <h1>Minhas Provas:</h1>
             <div class="table-responsive">
                 <table id="provas-table" class="table">
                     <tr>
                         <th>Nome</th>
-                        <th>Autor</th>
                         <th>Hora inicio</th>
                         <th>Hora fim</th>
                         <th>Acesso</th>
