--- a/source/disciplina.html
+++ b/source/disciplina.html
@@ -21,7 +21,7 @@
     <script src="scripts/disciplina.js"></script>
 
     <!--My CSS file -->
-    <link rel="stylesheet" href="style/mystyle.css">
+    <link rel="stylesheet" href="../style/mystyle.css">
 
     <!--Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
@@ -30,7 +30,7 @@
 
 </head>
     
-<body onload="startTime()">
+<body>
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -74,8 +74,7 @@
 <div class="container-fluid text-center">    
     <div class="list-group">
         <div class="col-sm-2 sidenav">
-            <a class="list-group-item" href="register-test.html">Adicionar</a>
-            <a class="list-group-item" href="#">Remover</a>
+            <a href="register-test.html" class="btn btn-default btn-circle btn-lg"><span class="glyphicon glyphicon-plus"></span></a>
         </div>
       
         <div class="col-sm-8 text-justify">
