--- a/source/disciplina.html
+++ b/source/disciplina.html
@@ -74,7 +74,7 @@
 <div class="container-fluid text-center">    
     <div class="list-group">
         <div class="col-sm-2 sidenav">
-            <a href="register-test.html" class="btn btn-default btn-circle btn-lg"><span class="glyphicon glyphicon-plus"></span></a>
+            <a id="register-test-button" href="#" class="btn btn-default btn-circle btn-lg"><span class="glyphicon glyphicon-plus"></span></a>
         </div>
       
         <div class="col-sm-8 text-justify">
