--- a/source/register-test.html
+++ b/source/register-test.html
@@ -52,8 +52,6 @@
         <li><a href="#">Contato</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li id="signup-topbar"><a href="register.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li id="login-topbar"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             <li id="user-name-topbar"><a id="username-topbar" href="source/register.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
@@ -102,7 +100,7 @@
             </div>
             
             <div class="form-group col-lg-2">
-                <label for="code">Duração:</label>
+                <label for="code">Hora de Termino:</label>
                 <input id="test-end-hour-input" class="time" />
             </div>
         </div>
