--- a/source/test.html
+++ b/source/test.html
@@ -35,7 +35,7 @@
             <a class="navbar-brand" href="#">WebSiteName</a>
         </div>
         <ul class="nav navbar-nav ">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="../index.html">Home</a></li>
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Disciplinas <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -49,9 +49,7 @@
         <li><a href="#">Contato</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li id="signup-topbar"><a href="register.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li id="login-topbar"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            <li id="user-name-topbar"><a id="username-topbar" href="register.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li id="user-name-topbar"><a id="username-topbar"href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
         
