--- a/source/my-page.html
+++ b/source/my-page.html
@@ -52,7 +52,7 @@
         <li><a href="#">Contato</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li id="user-name-topbar"><a id="username-topbar" href="source/register.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li id="user-name-topbar"><a id="username-topbar" href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
         
