Handle register student or teacher

--- a/source/register.html
+++ b/source/register.html
@@ -94,8 +94,8 @@
     
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <label id="student-register-input" class="radio-inline"><input type="radio" name="optradio">Estudante</label>
-            <label id="teacher-register-input" class="radio-inline"><input type="radio" name="optradio">Professor</label>
+            <label class="radio-inline"><input id="student-register-input" type="radio" name="optradio">Estudante</label>
+            <label class="radio-inline"><input id="teacher-register-input" type="radio" name="optradio">Professor</label>
         </div>
     </div>
     
