website name and portuguese translations

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<title>Prova OnLine</title>
+<title>Prova Online</title>
 <meta charset="UTF-8">
 
 <!-- Mobile port -->
@@ -33,7 +33,7 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Prova On-Line</a>
+            <a class="navbar-brand" href="#">Prova Online</a>
         </div>
         <ul class="nav navbar-nav ">
         <li class="active"><a href="#">Home</a></li>
@@ -50,7 +50,7 @@
         <li><a href="#">Contato</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li id="signup-topbar"><a href="source/register.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li id="signup-topbar"><a href="source/register.html"><span class="glyphicon glyphicon-user"></span> Cadastrar</a></li>
             <li id="login-topbar"><a href="source/login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             <li id="user-name-topbar"><a id="username-topbar" href="#"><span class="glyphicon glyphicon-user"></span></a></li>
             <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
