--- a/index.html
+++ b/index.html
@@ -1,153 +1,112 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<title>Prova Online</title>
-<meta charset="UTF-8">
+<head>
+  <title>Prova Online</title>
+  <meta charset="UTF-8">
 
-<!-- Mobile port -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Mobile port -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- W3 Framework -->
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <!-- W3 Framework -->
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<!-- Bootstrap -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- Bootstrap Core -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-<!-- jQuery library -->
-<script src="source/scripts/jquery/jquery-3.3.1.min.js"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
-<!--JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="source/scripts/index.js"></script>
+  <!--Custom CSS and Javascript -->
+  <link rel="stylesheet" href="style/mystyle.css">
+  <script type="text/javascript" src="source/scripts/index.js"></script>
 
-<!--My CSS file -->
-<link rel="stylesheet" href="style/mystyle.css">
-
-<!--Fonts -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">Prova Online</a>
-        </div>
-        <ul class="nav navbar-nav ">
-        <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Disciplinas <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                <li><a href="source/disciplina.html"> Engenharia de Software </a></li>
-                <li><a href="source/disciplina.html"> Linguagem de Programação 2 </a></li>
-                <li><a href="source/disciplina.html"> Linguagem de Programação 1 </a></li>
-                <li><a href="source/disciplina.html"> Introdução a Programação </a></li>
-            </ul>
-        </li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Contato</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li id="signup-topbar"><a href="source/register.html"><span class="glyphicon glyphicon-user"></span> Cadastrar</a></li>
-            <li id="login-topbar"><a href="source/login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            <li id="user-name-topbar"><a id="username-topbar" href="#"><span class="glyphicon glyphicon-user"></span></a></li>
-            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-        </ul>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Prova Online</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <!--
-        <form class="navbar-form navbar-right" action="/action_page.php">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Busca">
-                <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit">
-                        <i class="glyphicon glyphicon-search"></i>
-                    </button>
-                </div>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li id="disciplinas-topbar" class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Disciplinas</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="source/disciplina.html">Introdução a Programação</a>
+              <a class="dropdown-item" href="source/disciplina.html">Linguagem de Programação 1</a>
+              <a class="dropdown-item" href="source/disciplina.html">Linguagem de Programação 2</a>
+              <a class="dropdown-item" href="source/disciplina.html">Engenharia de Software</a>
             </div>
-        </form>
-        -->
+          </li>
 
-    </div>
-</nav>
+          <li id="signup-topbar" class="nav-item">
+            <a class="nav-link" href="source/register.html">Cadastrar</a>
+          </li>
 
-<!-- Header -->
+          <li id="login-topbar" class="nav-item">
+            <a class="nav-link" href="source/login.html">Login</a>
+          </li>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-    </ol>
+          <li id="username-topbar" class="nav-item dropdown">
+            <a id="username-topbar-name" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a id="username-topbar-link" class="dropdown-item" href="#">My Page</a>
+              <a id="username-logout" class="dropdown-item" href="#">Logout</a>
+            </div>
+          </li>
 
-        <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="image/slideshow-1.jpg" alt="Image">
-            <div class="carousel-caption">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a nisi commodo, facilisis neque eu, posuere lorem. Phasellus quis accumsan.</p>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Header -->
+    <header>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <!-- Slide One -->
+          <div class="carousel-item active" style="background-image: url('./image/bg-1.jpg')">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a nisi commodo, facilisis neque eu, posuere lorem. Phasellus quis accumsan.</p>
             </div>
           </div>
-
-          <div class="item">
-            <img src="image/slideshow-2.jpg" alt="Image">
-            <div class="carousel-caption">
+          <!-- Slide Two -->
+          <div class="carousel-item" style="background-image: url('./image/bg-2.jpg')">
+            <div class="carousel-caption d-none d-md-block">
               <h3>Lorem ipsum dolor sit amet, consectetur.</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla odio ipsum, placerat nec cursus eu, egestas sit amet nunc. Nulla.</p>
             </div>
           </div>
         </div>
+      </div>
+    </header>
 
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-    </div>
-
-
-<div class="container-fluid text-center">
-
-    <div class="row content">
-        <div class="col-sm-2 sidenav">
-            <p><a href="#"></a></p>
-            <p><a href="#"></a></p>
-            <p><a href="#"></a></p>
+    <!-- Page Content -->
+    <section class="py-5">
+      <div class="container">
+        <h1>Seja Bem-Vindo!</h1>
+        <p>O sistema de Provas On-line foi desenvolvido com o objetivo de auxiliar os professores a realizar avaliação (provas). As questões da avaliação criada são geradas de forma aleatóriamente de acordo com a disciplina e os assuntos escolhidos durante a criação da avaliação.
+          Todas as questões são extraídas de provas de concursos ou outros tipos de provas divulgadas.</p>
         </div>
+      </section>
 
-        <div class="col-sm-8 text-justify">
-            <h1>Seja Bem-Vindo!</h1>
-            <p>O sistema de Provas On-line foi desenvolvido com o objetivo de auxiliar os professores a realizar avaliação (provas). As questões da avaliação criada são geradas de forma aleatóriamente de acordo com a disciplina e os assuntos escolhidos durante a criação da avaliação.
-               Todas as questões são extraídas de provas de concursos ou outros tipos de provas divulgadas.
-            </p>
-
-            <hr>
-            <!--
-                <h3>Test</h3>
-                <p>Lorem ipsum...</p>
-            -->
+      <!-- Footer -->
+      <footer class="py-5 bg-dark">
+        <div class="container">
+          <p class="m-0 text-center text-white">Copyright © 2018 Provas On-line. Todos os direitos reservados.</p>
         </div>
-        <div class="col-sm-2 sidenav">
-            <div class="well">
-                <p>ADS</p>
-            </div>
-            <div class="well">
-                <p>ADS</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<footer class="container-fluid text-center">
-    <p>Copyright © 2018 Provas On-line. Todos os direitos reservados.</p>
-</footer>
-
+      </footer>
 
 </body>
 </html>
