move register and login pages. fix links on the landing site

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!--Custom CSS and Javascript -->
   <link rel="stylesheet" href="style/mystyle.css">
-  <script type="text/javascript" src="source/scripts/index.js"></script>
+  <script type="text/javascript" src="scripts/index.js"></script>
 
 </head>
 
@@ -29,7 +29,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Prova Online</a>
+      <a class="navbar-brand" href="/">Prova Online</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,11 +47,11 @@
           </li>
 
           <li id="signup-topbar" class="nav-item">
-            <a class="nav-link" href="source/register.html">Cadastrar</a>
+            <a class="nav-link" href="/cadastrar">Cadastrar</a>
           </li>
 
           <li id="login-topbar" class="nav-item">
-            <a class="nav-link" href="source/login.html">Login</a>
+            <a class="nav-link" href="/login">Login</a>
           </li>
 
           <li id="username-topbar" class="nav-item dropdown">
