rename index css file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <title>Prova Online</title>
+  <title>Prova WEB</title>
   <meta charset="UTF-8">
 
   <!-- Mobile port -->
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!--Custom CSS and Javascript -->
-  <link rel="stylesheet" href="style/mystyle.css">
+  <link rel="stylesheet" href="style/index.css">
   <script type="text/javascript" src="scripts/index.js"></script>
 
 </head>
