--- a/login/index.html
+++ b/login/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <title>Prova Online</title>
+  <title>Prova WEB</title>
   <meta charset="UTF-8">
 
   <!-- Mobile port -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- W3 Framework -->
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
   <!-- Bootstrap Core -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -17,22 +14,34 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!--Custom CSS and Javascript -->
+  <!-- Custom CSS and Javascript -->
   <link rel="stylesheet" href="/style/login.css">
   <script type="text/javascript" src="/scripts/login.js"></script>
+
+  <!-- Custom fonts for this template-->
+  <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
 </head>
 
-<body>
-
-  <div class="login-page">
-    <div class="form">
-      <form class="login-form">
-        <input id="input-email" type="email" placeholder="email"/>
-        <input id="input-password" type="password" placeholder="senha"/>
-        <button id="button-login">Entrar</button>
-        <p class="message"><a href="/cadastrar">Cadastrar</a></p>
-      </form>
+<body class="bg-dark">
+  <div class="container">
+    <div class="card card-login mx-auto mt-5">
+      <div class="card-body">
+        <form>
+          <div class="form-group">
+            <input class="form-control" id="input-email" type="email" aria-describedby="emailHelp" placeholder="Digite seu email">
+          </div>
+          <div class="form-group">
+            <input class="form-control" id="input-password" type="password" placeholder="Senha">
+          </div>
+          <a class="btn btn-primary btn-block" href="#" id="button-login">Entrar</a>
+        </form>
+        <div class="text-center">
+          <a class="d-block small mt-3" href="/cadastrar">Fazer Cadastro</a>
+        </div>
+      </div>
     </div>
   </div>
 
