--- a/source/login.html
+++ b/source/login.html
@@ -28,13 +28,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <body>
+
 <!-- Navbar -->
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="../index.html">Prova Online</a>
         </div>
-        <ul class="nav navbar-nav ">
+        <ul class="nav navbar-nav">
         <li><a href="../index.html">Home</a></li>
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Disciplinas <span class="caret"></span></a>
@@ -45,26 +46,17 @@
                 <li><a href="disciplina.html"> Introdução a Programação </a></li>
             </ul>
         </li>
+        <!--
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Contato</a></li>
+        -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li id="signup-topbar"><a href="register.html"><span class="glyphicon glyphicon-user"></span> Cadastrar</a></li>
             <li class="active" id="login-topbar"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            <li id="user-name-topbar"><a id="username-topbar" href="source/register.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+            <li id="user-name-topbar"><a id="username-topbar" href="../source/register.html"><span class="glyphicon glyphicon-user"></span> Usuario</a></li>
+            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
-
-        <form class="navbar-form navbar-right" action="/action_page.php">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Busca">
-                <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit">
-                        <i class="glyphicon glyphicon-search"></i>
-                    </button>
-                </div>
-            </div>
-        </form>
     </div>
 </nav>
 
