--- a/source/my-page.html
+++ b/source/my-page.html
@@ -32,7 +32,7 @@
 
 <body onload="startTime()">
 <!-- Navbar -->
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Prova Online</a>
@@ -48,15 +48,17 @@
                 <li><a href="disciplina.html"> Introdução a Programação </a></li>
             </ul>
         </li>
+        <!--
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Contato</a></li>
-        </ul>
+        -->
+      </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li id="user-name-topbar"><a id="username-topbar" href="#"><span class="glyphicon glyphicon-user"></span> Cadastrar</a></li>
-            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+            <li id="user-name-topbar"><a id="username-topbar" href="#"><span class="glyphicon glyphicon-user"></span> Usuario</a></li>
+            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
 
-        <form class="navbar-form navbar-right" action="/action_page.php">
+    <!--  <form class="navbar-form navbar-right" action="/action_page.php">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Busca">
                 <div class="input-group-btn">
@@ -65,7 +67,8 @@
                     </button>
                 </div>
             </div>
-        </form>
+        </form> -->
+
     </div>
 </nav>
 
