--- a/source/register-test.html
+++ b/source/register-test.html
@@ -32,7 +32,7 @@
 
 <body>
 <!-- Navbar -->
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="../index.html">Prova Online</a>
@@ -48,14 +48,16 @@
                 <li><a href="disciplina.html"> Introdução a Programação </a></li>
             </ul>
         </li>
+        <!--
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Contato</a></li>
+        -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li id="user-name-topbar"><a id="username-topbar" href="source/register.html"><span class="glyphicon glyphicon-user"></span> Cadastrar</a></li>
-            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+            <li id="user-name-topbar"><a id="username-topbar" href="../source/register.html"><span class="glyphicon glyphicon-user"></span> Usuario</a></li>
+            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
-
+        <!--
         <form class="navbar-form navbar-right" action="/action_page.php">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Busca">
@@ -66,12 +68,13 @@
                 </div>
             </div>
         </form>
+      -->
     </div>
 </nav>
 
 <!-- Header -->
 <div class="container">
-    <h1>Registrar nova prova</h1>
+    <h1>Registrar Nova Prova</h1>
     <p></p>
     <form role="form">
         <div class="row">
@@ -179,12 +182,12 @@
                     <option>Processos de Software</option>
                 </select>
             </div>
-
         </div>
 
         <div class="row">
             <button id="register-test-button" type="submit" class="btn btn-default">Registrar</button>
         </div>
+        <br>
     </form>
 </div>
 
