--- a/source/register.html
+++ b/source/register.html
@@ -29,7 +29,7 @@
 
 <body>
 <!-- Navbar -->
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-static-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="../index.html">Prova Online</a>
@@ -45,16 +45,19 @@
                 <li><a href="disciplina.html"> Introdução a Programação </a></li>
             </ul>
         </li>
+        <!--
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Contato</a></li>
+        -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="active" id="signup-topbar"><a href="register.html"><span class="glyphicon glyphicon-user"></span> Cadastrar</a></li>
             <li id="login-topbar"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            <li id="user-name-topbar"><a id="username-topbar" href="source/register.html"><span class="glyphicon glyphicon-user"></span> Cadastrar</a></li>
-            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+            <li id="user-name-topbar"><a id="username-topbar" href="../source/register.html"><span class="glyphicon glyphicon-user"></span> Usuario</a></li>
+            <li id="logout-topbar"><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
 
+        <!--
         <form class="navbar-form navbar-right" action="/action_page.php">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Busca">
@@ -65,9 +68,10 @@
                 </div>
             </div>
         </form>
+      -->
+
     </div>
 </nav>
-
 <!-- Header -->
 <div class="container">
 <form class="form-horizontal" action="">
