MINOR: fix some bugs

--- a/source/register-test.html
+++ b/source/register-test.html
@@ -134,6 +134,19 @@
         <div class="row">
             <div id="topics" class="form-group col-lg-4">
                 <label for="pwd">Assuntos de cada questão:</label>
+
+                <select class="form-control" id="sel_topics1" style="margin-bottom: 20px">
+                    <option>Engenharia de Requisitos</option>
+                    <option>Modelagem de Sistemas</option>
+                    <option>Processos de Software</option>
+                </select>
+
+                <select class="form-control" id="sel_topics2" style="margin-bottom: 20px">
+                    <option>Engenharia de Requisitos</option>
+                    <option>Modelagem de Sistemas</option>
+                    <option>Processos de Software</option>
+                </select>
+
                 <select class="form-control" id="sel_topics3" style="margin-bottom: 20px">
                     <option>Engenharia de Requisitos</option>
                     <option>Modelagem de Sistemas</option>
